# octo

./: AGENTS.md  Cargo.toml  LICENSE  README.md
components/history/: Cargo.toml
components/history/migrations/: 0001_init.sql
components/history/src/: lib.rs  sqlite.rs
components/http-auth/: Cargo.toml
components/http-auth/src/: lib.rs
components/workspace/: Cargo.toml
components/workspace/src/: lib.rs
config/: README.md  octo.toml
config/connectors/petstore/: petstore.toml
config/connectors/petstore/models/: category.json  pet.json  pet_array.json  tag.json
connectors/caldav/: Cargo.toml  caldav.toml
connectors/caldav/src/: dav.rs  lib.rs
connectors/forkd/: Cargo.toml
connectors/forkd/src/: lib.rs
connectors/http/: Cargo.toml
connectors/http/examples/: petstore_dyn_round_trip.rs
connectors/http/src/: jsonpath.rs  lib.rs  spec.rs
connectors/http/tests/: config_load.rs  petstore_dyn.rs  templated_body.rs
connectors/http/tests/fixtures/: octo.toml
connectors/http/tests/fixtures/connectors/petstore/: petstore.toml
connectors/http/tests/fixtures/router_only/: octo.toml
connectors/mail/: Cargo.toml
connectors/mail/src/: config.rs  error.rs  imap.rs  lib.rs  mime.rs  smtp.rs
connectors/mqtt/: Cargo.toml  factory_mqtt.toml
connectors/mqtt/src/: lib.rs
connectors/petstore/: Cargo.toml
connectors/petstore/examples/: petstore_round_trip.rs
connectors/petstore/src/: lib.rs
connectors/petstore/tests/: mock_round_trip.rs
connectors/petstore/tests/mock_http/: mod.rs
connectors/scheduler/: Cargo.toml  heartbeat.toml
connectors/scheduler/src/: lib.rs
connectors/scheduler/tests/: tick.rs
connectors/search/: Cargo.toml
connectors/search/src/: ddg.rs  lib.rs
connectors/storage/: Cargo.toml  storage.toml
connectors/storage/src/: backend.rs  lib.rs
connectors/telegram/: Cargo.toml  telegram.toml  telegram_acl.json
connectors/telegram/src/: acl.rs  batch.rs  format.rs  fs.rs  lib.rs  live.rs
octo-code/: Cargo.toml
octo-code/src/: lib.rs  macros.rs  search.rs  tools.rs  workspace.rs
octo-core/: Cargo.toml
octo-core/examples/: incident_to_telegram.rs  streaming_response.rs  tick_bus.rs
octo-core/src/: bus.rs  bus_queue.rs  config.rs  control.rs  error.rs  ids.rs  lib.rs  runtime.rs
octo-core/src/cogitator/: mod.rs
octo-core/src/connector/: channel.rs  lifecycle.rs  mod.rs  subscription.rs
octo-core/src/envelope/: blob.rs  kind.rs  message.rs  metadata.rs  mod.rs  payload.rs  registry.rs  stream.rs  trail.rs
octo-core/src/router/: mod.rs  route.rs  rule_based.rs
octo-history/: Cargo.toml
octo-history/src/: lib.rs
octo-rig/: Cargo.toml
octo-rig/src/: lib.rs
octolab/: Cargo.toml  README.md  octolab.service
octolab/config/: octo.toml
octolab/config/connectors/telegram/: telegram.toml
octolab/src/: cogitator.rs  config.rs  console.rs  error.rs  history.rs  llm.rs  main.rs
