[workspace]
resolver = "2"
members = [
    "octo-core",
    "components/history",
    "components/http-auth",
    "components/workspace",
    "connectors/petstore",
    "connectors/http",
    "connectors/telegram",
    "connectors/scheduler",
    "connectors/caldav",
    "connectors/storage",
    "connectors/forkd",
    "connectors/mail",
    "octo-rig",
    "octo-code",
]
# Keep `cargo test` (no --workspace) light — octo-rig / telegram pull the
# rig/LLM and teloxide trees. The components/ libs are light, so they stay in the
# default set.
default-members = [
    "octo-core",
    "components/history",
    "components/http-auth",
    "components/workspace",
    "connectors/petstore",
    "connectors/http",
    "connectors/scheduler",
    "connectors/caldav",
    "connectors/storage",
    "connectors/mail",
    "octo-code",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Octo contributors"]
repository = "https://github.com/lamantinai/octo"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1.40", features = ["sync", "rt", "macros", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v7", "serde"] }
thiserror = "2.0"
tracing = "0.1"
bytes = "1.7"
parking_lot = "0.12"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
teloxide = "0.17"
base64 = "0.22"
