[package]
name = "octo-code"
version.workspace = true
edition.workspace = true
# Original code (workspace.rs) is MIT; the file/code tools are ported from
# llm-coding-tools-rig (Apache-2.0), so the crate as a whole is dual.
license = "MIT AND Apache-2.0"
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "File/code faculty for Octo cogitators, exposed as rig tools and jailed to a workspace root. File tools ported from llm-coding-tools-rig (Apache-2.0) to rig 0.35."

[dependencies]
octo-workspace = { path = "../components/workspace" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rig-core = "0.35"
glob = "0.3"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }
