[package]
name = "octo-history"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pluggable per-channel conversation history for Octo agents — a backend-neutral trait (the way teloxide's Storage is pluggable) with in-memory and file backends. LLM-agnostic: stores neutral turns, no binding to any model library."

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
thiserror = { workspace = true }
