[package]
name = "octo-rig"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A rig Tool bridging rig's native tool-calling to the Octo connector system — a tool call dispatches a command to a connector over the bus and returns its result to the model."

[dependencies]
octo-core = { path = "../octo-core" }
rig-core = "0.35"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
