[package]
name = "octo-connector-forkd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Sandboxed script-execution connector (forkd v0): runs a skill's script as a subprocess jailed to the code workspace — clean env (no agent secrets), dropped privileges, a wall-clock timeout that kills the process group, and CPU/file rlimits. The exec substrate for executable skills."

[dependencies]
octo-core = { path = "../../octo-core" }
octo-workspace = { path = "../../components/workspace" }
tokio = { workspace = true, features = ["process", "time", "io-util"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
