[package]
name = "octo-connector-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Durable object-store connector for the Octo runtime: put/get/list/delete over a swappable backend (local directory now, S3-compatible later). Env-as-tools organ for promoting artifacts out of the ephemeral workspace."

[dependencies]
octo-core = { path = "../../octo-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio-util = { workspace = true }
